packages/macros/tests/compile_fail/on_tuple_struct.stderr
error: Unsupported shape `unnamed fields`. Expected named fields.
 --> tests/compile_fail/on_tuple_struct.rs:4:48
  |
4 | #[derive(Debug, Clone, Serialize, Deserialize, Settings)]
  |                                                ^^^^^^^^
  |
  = note: this error originates in the derive macro `Settings` (in Nightly builds, run with -Z macro-backtrace for more info)
